# hysteresis-fan-monitor

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  prj.conf
app/include/: tasks.hpp
app/src/: actuator_task.cpp  main.cpp  regulator_task.cpp  sensor_task.cpp
